fixed nav bar spacing and alignment

--- a/css/index.css
+++ b/css/index.css
@@ -174,6 +174,16 @@ nav a:hover {
 	background-color: dodgerblue;
 }
 
+header {
+	display:flex;
+	justify-content: space-evenly;
+	align-items: baseline;
+}
+
+header a {
+	padding:40px;
+}
+
 .bottom-content {
     display: flex;
     margin: 0 2% 20px;
